<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/widgetOrange">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginLeft="48dp"
        app:layout_constraintEnd_toStartOf="@+id/login_title"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_logo" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginRight="48dp"
        android:layout_marginLeft="24dp"
        android:text="@string/app_title"
        android:textSize="36dp"
        android:textColor="@color/white"
        android:fontFamily="@font/cafe24_classic_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_cl_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/login_corner_container"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_title">

        <LinearLayout
            android:id="@+id/login_ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_corner_box"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/login_et_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/id"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/button" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textSize="16sp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/login_cb_autologin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/login_checkbox_selector"
            android:button="@null"
            app:layout_constraintBottom_toTopOf="@+id/login_btn_login"
            app:layout_constraintEnd_toStartOf="@+id/login_tv_autologin"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_ll_container" />

        <TextView
            android:id="@+id/login_tv_autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="8dp"
            android:text="@string/login_autoLogin"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/login_btn_login"
            app:layout_constraintStart_toEndOf="@+id/login_cb_autologin"
            app:layout_constraintTop_toBottomOf="@+id/login_ll_container" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_corner_box"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_cl_container" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>